--- a/dbt_project/profiles.yml
+++ b/dbt_project/profiles.yml
@@ -11,3 +11,16 @@ olist:
         #s3_region: my-aws-region
         #s3_access_key_id: "{{ env_var('S3_ACCESS_KEY_ID') }}"
         #s3_secret_access_key: "{{ env_var('S3_SECRET_ACCESS_KEY') }}"
+
+postgres:
+  target: dev
+  outputs:
+    dev:
+      type: postgres
+      host: localhost
+      user: postgres
+      password: root
+      port: 5432
+      database: postgres # or database instead of dbname     
+      threads: 10
+      schema: public
