--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -4,7 +4,7 @@ version: "2.0"
 
 require-dbt-version: ">=1.0.0"
 
-profile: "olist"
+profile: "postgres"
 
 model-paths: ["models"]
 seed-paths: ["seeds"]
